syntax = "proto3";
option go_package = "github.com/grafana/grafana-plugin-sdk-go/genproto/transform";

package transform;

import "datasource.proto";


service TransformPlugin {
    rpc Query(modelsV2.DatasourceRequest) returns (modelsV2.DatasourceResponse);
}

service GrafanaAPI {
    rpc QueryDatasource(QueryDatasourceRequest) returns (QueryDatasourceResponse);
}

message QueryDatasourceRequest {
    modelsV2.TimeRange timeRange = 1;
    int64 datasourceId = 2;
    repeated modelsV2.Query queries = 3;
    int64 orgId = 4;
  }
  
  message QueryDatasourceResponse {
    repeated modelsV2.QueryResult results = 1;
  }
  